--- a/index.html
+++ b/index.html
@@ -818,9 +818,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://github.com/FaizUlHassan123" target="_blank" class="linkedin"><i class="bx bxl-linkedin"
-                  style="font-size: 18px !important;"></i></a>
-              <a href="mailto:faiz.ul.hassan550@gmail.com" target="_blank" class="google"><i class="bx bxl-google"
+              <a href="http://www.linkedin.com/in/faizulhassan550" target="_blank" class="linkedin"><i
+                  class="bx bxl-linkedin" style="font-size: 18px !important;"></i></a>
+              <a href="mailto:faizulhassan550@gmail.com" target="_blank" class="google"><i class="bx bxl-google"
                   style="font-size: 18px !important;"></i></a>
               <!-- <a href="https://twitter.com/qaiserabbas0" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a> -->
               <a href="https://instagram.com/faiz_ul_hassan1" target="_blank" class="instagram"><i
