--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
             <h4>Wind@wi</h4>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/twitteranalysis.jpg" class="img-fluid" alt="">
+            <img src="assets/img/project/win@wi.png" class="img-fluid" alt="">
             <div class="portfolio-info">
 
               <div class="portfolio-links">
-                <a href="projects/twitteranalysis.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+                <a href="projects/win@wi.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
+                  title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -460,12 +460,12 @@
             <h4>NK ASSOCIATES</h4>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/iras.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/project/nkassosiate.png" class="img-fluid" alt="">
             <div class="portfolio-info">
 
               <div class="portfolio-links">
-                <a href="projects/iras.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
+                <a href="projects/nkassosiate.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -480,7 +480,7 @@
             <div class="portfolio-info">
 
               <div class="portfolio-links">
-                <a href="projects/musicplayer.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="projects/primeHRMS.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
@@ -492,11 +492,11 @@
             <h4>PrismaLedge</h4>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/recommender.jpg" class="img-fluid" alt="">
+            <img src="assets/img/project/prismaLedge.png" class="img-fluid" alt="">
             <div class="portfolio-info">
 
               <div class="portfolio-links">
-                <a href="projects/recommender.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="projects/prismaLedge.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
