--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
             <h4>Fluently: World Talk & Pen Pal</h4>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/ml.jpg" class="img-fluid" alt="">
+            <img src="assets/img/project/Fluently.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
-                <a href="projects/ml.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
+                <a href="projects/Fluently.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
